An image has been

--- a/Subject.html
+++ b/Subject.html
@@ -11,7 +11,7 @@
     <div id="app">
         <main>
             
-            <!-- The double curly brackets is the shorter version of 'v-text' -->
+            <!-- Details -->
             <b><i>
                 <p v-text=' "Subject: "  +  modules.subject'>   </p>
                 <p v-text=' "Location: " +  modules.location'>  </p>
