--- a/Subject.html
+++ b/Subject.html
@@ -3,6 +3,7 @@
 <head>   
     <title>SUBJECT SPACES</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.js"></script>
+    <!-- <script src="/js/lesson.js" type="text/javascript"></script> -->
 </head>
 
 <body>
@@ -10,7 +11,11 @@
     <!-- Elements where Vue.js will mount the application --> 
     <div id="app">
         <main>
-            
+
+            <figure>
+                <!-- bind the 'src' attribute to the 'modules.image' in 'data' -->
+                <img v-bind:src="modules.image" width=200 height=200>
+            </figure>
             <!-- Details -->
             <b><i>
                 <p v-text=' "Subject: "  +  modules.subject'>   </p>
