--- a/Subject.html
+++ b/Subject.html
@@ -3,7 +3,7 @@
 <head>   
     <title>SUBJECT SPACES</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.js"></script>
-    <!-- <script src="/js/lesson.js" type="text/javascript"></script> -->
+    <script src="/js/module.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -11,24 +11,24 @@
     <!-- Elements where Vue.js will mount the application --> 
     <div id="app">
         <main>
-
+            <div v-for="module in modules">
             <figure>
                 <!-- bind the 'src' attribute to the 'modules.image' in 'data' -->
-                <img v-bind:src="modules.image" width=200 height=200>
+                <img v-bind:src="module.image" width=200 height=200>
             </figure>
             <!-- Details -->
             <b><i>
-                <p v-text=' "Subject: "  +  modules.subject'>   </p>
-                <p v-text=' "Location: " +  modules.location'>  </p>
-                <p v-text=' "Price: "    +  modules.price'>     </p>
-                <p v-text=' "Spaces: "   +  modules.spaces'>    </p>
+                <p v-text=' "Subject: "  +  module.subject'>   </p>
+                <p v-text=' "Location: " +  module.location'>  </p>
+                <p v-text=' "Price: "    +  module.price'>     </p>
+                <p v-text=' "Spaces: "   +  module.spaces'>    </p>
             </b></i>
                 
             <!-- Button will get disabled after the Spaces reach to Zero -->
             <button v-on:click="addToCart" :disabled="numberOfSpaces == 0">
                 Add to Cart
             </button>   
-            
+        </div>
         </main>
     </div>
 
@@ -37,12 +37,7 @@
         var app = new Vue({
             el:'#app',
             data:{ 
-                modules:{
-                    subject: "Math",
-                    location: "London",
-                    price: "£100",
-                    spaces: "5",
-                }
+                modules: module,
             },
             methods: {
                 addToCart: function (){
